--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "type": "module",
   "dependencies": {
     "sass": "^1.63.6",
+    "three": "^0.154.0",
     "zod": "^3.22.0-canary.20230623T202513"
   }
 }
